2017-06-21  Tinu Weber  <martin.weber@epfl.ch>
	* epfl-scripts-git: Add changelog

2017-06-19  Tinu Weber  <martin.weber@epfl.ch>
	* epfl-scripts-git: Initial submission to AUR