@@ -2,17 +2,17 @@
 
 pkgname=epfl-scripts-git
 _pkgname=epfl-scripts
-pkgver=r47.b0979bf
+pkgver=r50.46ba816
 pkgrel=1
-pkgdesc="Collection of scripts for simplifying one's life at the EPFL"
+pkgdesc="Collection of scripts for simplifying one's life at EPFL"
 arch=('any')
-url='https://gitlab.gnugen.ch/mtweber/epfl-scripts'
+url='https://gitlab.gnugen.ch/gnugen/epfl-scripts'
 license=('Apache')
 provides=(epfl-scripts)
 conflicts=(epfl-scripts)
 depends=(coreutils)
 changelog='changelog'
-source=('git+https://gitlab.gnugen.ch/mtweber/epfl-scripts.git')
+source=('git+https://gitlab.gnugen.ch/gnugen/epfl-scripts.git')
 md5sums=('SKIP')
 
 pkgver() {
