@@ -1,3 +1,6 @@
+2017-09-24  Tinu Weber  <martin.weber@epfl.ch>
+	* epfl-scripts-git: Update for upstream merge (no new features downstream)
+
 2017-06-21  Tinu Weber  <martin.weber@epfl.ch>
 	* epfl-scripts-git: Add changelog
 
